--- a/.github/workflows/reveal-location.yml
+++ b/.github/workflows/reveal-location.yml
@@ -1,46 +1,55 @@
 name: Reveal Location (J-6 18:00 Europe/Paris)
 
 on:
-  schedule:
-    # 30/11/2025 17:00 UTC = 18:00 Europe/Paris (J-6)
-    - cron: "0 17 30 11 *"
-  workflow_dispatch: {}  # permet un lancement manuel pour tester
-
-permissions:
-  contents: write
+  workflow_dispatch:
 
 jobs:
   reveal:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      # Sécurité : n’exécuter que pour l’année 2025
+    steps:
+      - name: Set up job
+        run: echo "Starting reveal process..."
+
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Guard correct year
         run: |
-          YEAR=$(date -u +%Y)
-          if [ "$YEAR" != "2025" ]; then
-            echo "Not target year ($YEAR). Exiting."
-            exit 0
+          YEAR=$(date +'%Y')
+          if [ "$YEAR" -gt 2025 ]; then
+            echo "⏹ Too late: event year already passed ($YEAR)"
+            exit 1
           fi
 
       - name: Write location.json from secrets
         run: |
+          mkdir -p .
+          # Priorité à LOCATION_HTML si elle existe, sinon LOCATION_VALUE
           if [ -n "${{ secrets.LOCATION_HTML }}" ]; then
-            printf '{ "html": "%s" }\n' "${{ secrets.LOCATION_HTML }}" > location.json
+            echo "{\"html\": \"${{ secrets.LOCATION_HTML }}\"}" > location.json
           elif [ -n "${{ secrets.LOCATION_VALUE }}" ]; then
-            printf '{ "location": "%s" }\n' "${{ secrets.LOCATION_VALUE }}" > location.json
+            echo "{\"location\": \"${{ secrets.LOCATION_VALUE }}\"}" > location.json
           else
-            echo "❌ Missing LOCATION_HTML or LOCATION_VALUE secret." >&2
+            echo "❌ Missing LOCATION_HTML or LOCATION_VALUE secret."
             exit 1
           fi
-          echo "location.json content:"
           cat location.json
 
-      - name: Commit & push
+      - name: Commit & push (only if changed)
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+          # S'assurer que le fichier est suivi
+          git add -N location.json
+
+          # Vérifie s'il y a une différence
+          if git diff --quiet --exit-code -- location.json; then
+            echo "✅ No changes to commit. Exiting successfully."
+            exit 0
+          fi
+
           git add location.json
-          git commit -m "Reveal location (J-6 18:00 Europe/Paris)"
+          git commit -m "Update location.json (reveal/location)"
           git push
