--- a/.github/workflows/reveal-location.yml
+++ b/.github/workflows/reveal-location.yml
@@ -1,22 +1,24 @@
 name: Reveal Location (J-6 18:00 Europe/Paris)
 
 on:
-  workflow_dispatch: {}   # lancement manuel
+  workflow_dispatch: {}         # bouton "Run workflow"
+  schedule:
+    - cron: '0 17 30 11 *'      # 30 novembre à 17:00 UTC = 18:00 Europe/Paris
 
 jobs:
   reveal:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
+      # (Optionnel) garde-fou pour éviter d'exécuter après l'année de l'événement
       - name: Guard correct year
         run: |
           YEAR=$(date +'%Y')
           if [ "$YEAR" -gt 2025 ]; then
             echo "⏹ Too late: event year already passed ($YEAR)"
-            exit 1
+            exit 0
           fi
 
       - name: Install jq
@@ -34,7 +36,7 @@ jobs:
             echo "❌ Missing LOCATION_HTML or LOCATION_VALUE secret."
             exit 1
           fi
-          echo "location.json:"
+          echo "location.json generated:"
           cat location.json
 
       - name: Commit & push (only if changed)
@@ -42,7 +44,6 @@ jobs:
           git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-          # S'assurer que le fichier est suivi et détecter un vrai changement
           git add -N location.json
           if git diff --quiet --exit-code -- location.json; then
             echo "✅ No changes to commit. Exiting successfully."
@@ -50,5 +51,5 @@ jobs:
           fi
 
           git add location.json
-          git commit -m "Update location.json (reveal/location)"
+          git commit -m "Update location.json (auto reveal J-6 18:00 Europe/Paris)"
           git push
